--- a/YLMES/Views/Discuss/Posting.cshtml
+++ b/YLMES/Views/Discuss/Posting.cshtml
@@ -14,36 +14,58 @@
     <meta name="description" content="Fly社区是模块化前端UI框架Layui的官网社区，致力于为web开发提供强劲动力">
     <link href="~/css/global.css" rel="stylesheet" />
     <link href="~/layui/css/layui.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/js/jquery.js"></script>
+   
     <script src="~/layui/layui.js" type="text/javascript"></script>
     <script type="text/javascript" src="~/js/jquery-1.9.1.min.js"></script>
     <script src="" type="text/javascript"></script>
     <script type="text/javascript">
         $(function () {
-            layui.use('form', function () {
-
-            });
-            $('#OK').click(function () {
-                var columnist = $('#columnist').val();
-                var titble = $('#L_title').val();
-                var Substance = $('#L_content').val();
-                $.ajax({
-                    url: "/Discuss/Postingup",
-                    type: "post",
-                    data: { columnist: columnist, title: titble, Substance: Substance, Picture:""},
-                    dataType: "json",
-                    success: function (data) {
-                        if (data != null) {
-                            if (data == "false") {
-                                alert('发帖失败');
-                            } else if (data == "true") {
-                                alert('发帖成功');
-                                self.location = document.referrer;
-                            }
-                        }
+            layui.use(['layedit', 'layer','form'], function () {
+              var $ =layui.jquery
+                var layedit = layui.layedit;
+                var form = layui.form
+                var layer=layui.layer
+                layedit.set({
+                    //暴露layupload参数设置接口 --详细查看layupload参数说明
+                    uploadImage: {
+                        url: '/Discuss/LayUploadFile',
+                        type: 'post'
                     }
+                    , tool: [
+                        'strong' //加粗
+                        , 'italic' //斜体
+                        , 'underline' //下划线
+                        , 'del' //删除线
+                        , '|' //分割线
+                        , 'left' //左对齐
+                        , 'center' //居中对齐
+                        , 'right' //右对齐
+                    ]
+                    , height: 100
                 });
-            });
+                var ieditor = layedit.build('L_content');
+               
+                form.on('submit(tu)', function (data) {
+                    var value = layedit.getContent(ieditor)
+                    $.ajax({
+                        url: "/Discuss/Postingup",
+                        type: "post",
+                        data: { data: data.field, value: value },
+                        dataType: "json",
+                        success: function (data) {
+                            parent.layer.closeAll()
+                        }
+                    });
+                    return false;
+                })
+                //$('#OK').click(function () {
+                //    var columnist = $('#columnist').val();
+                //    var titble = $('#L_title').val();
+                    
+                    
+                //});
+            })
+      
         });
     </script>
 </head>
@@ -60,19 +82,17 @@
     <div class="layui-container fly-marginTop">
         <div class="fly-panel" pad20 style="padding-top: 5px;">
             <!--<div class="fly-none">没有权限</div>-->
-            <div class="layui-form layui-form-pane">
                 <div class="layui-tab layui-tab-brief" lay-filter="user">
                     <ul class="layui-tab-title">
                         <li class="layui-this">发表新帖<!-- 编辑帖子 --></li>
                     </ul>
-                    <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
-                        <div class="layui-tab-item layui-show">
-                            <form>
+                    <div class="layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
+                        <form class="layui-form layui-form-pane layui-tab-item layui-show">
                                 <div class="layui-row layui-col-space15 layui-form-item">
                                     <div class="layui-col-md3">
                                         <label class="layui-form-label">所在专栏</label>
                                         <div class="layui-input-block">
-                                            <select id="columnist">
+                                            <select name="Columns">
                                                 <option>提问</option>
                                                 <option>分享</option>
                                                 <option>讨论</option>
@@ -85,24 +105,22 @@
                                     <div class="layui-col-md9">
                                         <label for="L_title" class="layui-form-label">标题</label>
                                         <div class="layui-input-block">
-                                            <input type="text" id="L_title" name="title" required lay-verify="required" autocomplete="off" class="layui-input">
+                                            <input type="text" name="Title" required lay-verify="required" autocomplete="off" class="layui-input">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="layui-form-item layui-form-text">
                                     <div class="layui-input-block">
-                                        <textarea id="L_content" name="content" required lay-verify="required" placeholder="详细描述" class="layui-textarea fly-editor" style="height: 260px;"></textarea>
+                                        <textarea  name="Substance" id="L_content" placeholder="详细描述" class="layui-textarea fly-editor" style="height: 260px;"></textarea>
                                     </div>
                                 </div>
                                 <div class="layui-form-item">
-                                    <button class="layui-btn" lay-filter="*" lay-submit id="OK">立即发布</button>
+                                    <button class="layui-btn" lay-filter="tu" lay-submit id="OK">立即发布</button>
                                 </div>
-                            </form>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 </body>
 </html>
