--- a/YLMES/Views/ProductionPlanning/WorkManagement.cshtml
+++ b/YLMES/Views/ProductionPlanning/WorkManagement.cshtml
@@ -189,6 +189,7 @@
 
     </script>
     <script type="text/html" id="barDemo">
+        <a class="layui-btn layui-btn-xs" id="print" lay-event="update">打印工艺卡</a>
         <a class="layui-btn layui-btn-xs" id="detials" lay-event="Detials">查看合同</a>
         <a class="layui-btn layui-btn-xs" id="edit" lay-event="update">工单分配信息</a>
     </script>
