--- a/YLMES/Views/TaskManagement/TaskMapPart.cshtml
+++ b/YLMES/Views/TaskManagement/TaskMapPart.cshtml
@@ -100,6 +100,7 @@
                         var zj = data.是否组装件;
                         var parid = data.子件序号;
                         if (zj == 0) {
+                            d.工艺流程 = '';
                             layer.msg('没有流程!');
                         }
                         else {
