--- a/YLMES/Views/TaskManagement/Purchasing.cshtml
+++ b/YLMES/Views/TaskManagement/Purchasing.cshtml
@@ -14,13 +14,39 @@
     <link href="~/layui/css/layui.css" rel="stylesheet" />
     <script type="text/javascript" src="../../js/jquery.js"></script>
     <script src="~/layui/layui.js" type="text/javascript"></script>
-
     <script type="text/javascript">
 
         $(function () {
             layui.use(['table', 'layer'], function () {
                 var layer = layui.layer;
-                $("#AddPurchasing").click(function () {
+                @*$.ajax({
+                    type: "get",
+                    url: '/TaskManagement/CheckPurlist',
+                    data: { partid: '@ViewData["pid"]', Taskid: '@ViewData["purcha"]' },
+                    dataType: "text",
+                    success: function (data) {
+                        if (data == "true") {
+                            $.ajax({
+                                type: "POST",
+                                url: '/TaskManagement/AddPurlist',
+                                data: { partid: '@ViewData["pid"]', Taskid: '@ViewData["purcha"]' },
+                                dataType: "text",
+                                success: function (data) {
+                                    if (data == "true") {
+                                        layer.msg('新增成功');
+                                        window.parent.location.reload();
+                                    }
+                                    else {
+                                        layer.show('出现异常');
+                                    }
+                                }
+                            });
+                        }
+                        else {                                                     
+                        }
+                    }
+                });*@
+                @*$("#AddPurchasing").click(function () {
                     var url = '/TaskManagement/AddPur?Taskid='+'@ViewData["purcha"]';
                     var index = layer.open({
                         type: 2,
@@ -30,7 +56,7 @@
                     });
                     layer.full(index);
                    // window.parent.document.getElementById("rightframe").src = "/TaskManagement/AddPur";
-                });
+                });*@                         
             });
           
             $("#SubmitPurchase").click(function () {
@@ -39,7 +65,7 @@
                 $.ajax({
                     url: "/TaskManagement/EQProcurement",
                     type: "post",
-                    data: { taskid: taskid},
+                    data: { taskid: taskid,marterid:'@ViewData["pid2"]' },
                     dataType: "text",
                     success: function (data) {
                         if (data == "true") {
@@ -49,7 +75,7 @@
                             }, 500);
                         }
                         else {
-                            layer.msg("编辑失败！");
+                            layer.msg("采购申请失败，请重新登录系统!");
                             return;
                         }
                     }
@@ -75,7 +101,7 @@
                        , { field: '申请采购数量', width: 120, title: '申请采购数量' }
                        , { field: '单位', width: 100, title: '单位', edit: Text,style: 'color:#009688' }
                        , { field: '备注', width: 100, title: '备注', edit: Text,style: 'color:#009688'}
-                   , { field: '类型', width: 100, title: '类型' }
+                    , { field: '类型', width: 100, title: '类型', edit: Text, style: 'color:#009688' }
                     , { field: '任务编号', width: 150, title: '任务编码' }
                    , { field: 'right', width: 178, align: 'center', toolbar: '#barDemo' }
                    ]]
@@ -90,10 +116,11 @@
                             PcsNumber = data.每套数量;
                             units = data.单位;
                             note = data.备注;
+                            type = data.类型;
                             $.ajax({
                                 url: "/TaskManagement/EditPurchase",
                                 type: "post",
-                                data: { taskid: tid, matrterID: mid, ApplayPcs: AppPcs, PcsNumber: PcsNumber, unit: units, note: note},
+                                data: { taskid: tid, matrterID: mid, ApplayPcs: AppPcs, PcsNumber: PcsNumber, unit: units, note: note, types: type },
                                 dataType: "text",
                                 success: function (data) {
                                     if (data == "true") {
@@ -103,32 +130,32 @@
                                         }, 500);
                                     }
                                     else {
-                                        layer.msg("还有东西没有填完哦！");
+                                        layer.msg("还有信息没有填完哦！");
                                         return;
                                     }
                                 }
                             });
                             break;
-                        case 'del':
-                            tid = data.任务编号;
-                            mid = data.部件编号;
-                            layer.confirm("真的删除行么", function (index) {                               
-                                var url = "/TaskManagement/DeletePurchase";
-                                $.ajax({
-                                    url: url,
-                                    data: { taskid: tid, marterid: mid },
-                                    type: "post",
-                                    dataType: "text",
-                                    success: function (data) {
-                                        if (data == "true") {
-                                            layer.msg('删除成功！');
-                                            table.reload('tw');
-                                        }
+                        //case 'del':
+                        //    tid = data.任务编号;
+                        //    mid = data.部件编号;
+                        //    layer.confirm("真的删除行么", function (index) {                               
+                        //        var url = "/TaskManagement/DeletePurchase";
+                        //        $.ajax({
+                        //            url: url,
+                        //            data: { taskid: tid, marterid: mid },
+                        //            type: "post",
+                        //            dataType: "text",
+                        //            success: function (data) {
+                        //                if (data == "true") {
+                        //                    layer.msg('删除成功！');
+                        //                    table.reload('tw');
+                        //                }
                                       
-                                    }
-                                });
-                            });
-                            break;
+                        //            }
+                        //        });
+                        //    });
+                        //    break;
                     };
                 }); 
                 });                     
@@ -138,7 +165,7 @@
     </script>
     <script type="text/html" id="barDemo">
         <a class="layui-btn layui-btn-xs" id="update" lay-event="update">编辑</a>
-        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del" id="del">删除</a>
+        @*<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del" id="del">删除</a>*@
     </script>
 </head>
 
@@ -160,7 +187,7 @@
                 </li>
 
             </ul>*@
-            <button class="layui-btn" id="AddPurchasing" data-type="reload">新增采购申请</button>
+            @*<button class="layui-btn" id="AddPurchasing" data-type="reload">新增采购申请</button>*@
             <button class="layui-btn" id="SubmitPurchase" data-type="reload">确认提交采购申请</button>
 
         </div>
